--- a/app/src/main/res/layout/logged_out_rib.xml
+++ b/app/src/main/res/layout/logged_out_rib.xml
@@ -9,10 +9,19 @@
         android:layout_height="0dp"
         android:layout_weight='1'/>
     <EditText
-        android:id="@+id/edit_text"
-        android:hint="Enter your name"
+        android:id="@+id/player_one_name"
+        android:hint="@string/player_one_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:layout_margin="16dp"/>
+
+    <EditText
+        android:id="@+id/player_two_name"
+        android:hint="@string/player_two_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
         android:layout_margin="16dp"/>
     <Button
         android:id="@+id/login_button"
